--- a/03.CSS-Layout/3.MembersLogin/index.html
+++ b/03.CSS-Layout/3.MembersLogin/index.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Members Login</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body>
-<header class="">
+<header>
     <div class="logo">
         <img src="images/comp.png" alt="logo" width="37" height="44">
     </div>
     <div class="login-container">
-        <hgroup>
-            <h4>Members login:</h4>
-        </hgroup>
-
-        <input type="text" placeholder="Your name">
-        <input type="text" placeholder="Email Id">
-        <input type="submit" name="login_btn" value="Go">
+        <form class="login_form">
+            <label for="members">Members login:</label>
+            <input type="text" placeholder="Your name">
+            <input type="text" placeholder="Email Id">
+            <input type="submit" name="login_btn" value="Go">
+        </form>
     </div>
 </header>
 <main>
