Laptop Store Task Initial Commit

--- a/03.CSS-Layout/5.LaptopStore/index.html
+++ b/03.CSS-Layout/5.LaptopStore/index.html
@@ -38,8 +38,8 @@
             <div class="product-content">
                 <p>64GB</p>
                 <p>2GB DDR</p>
-                <p>1300 USD</p>
-                <p>Intel Core i5</p>
+                <p class="last multiple">1300 USD</p>
+                <p class="multiple">Intel Core i5</p>
             </div>
         </fieldset>
         <fieldset>
@@ -48,8 +48,8 @@
             <div class="product-content">
                 <p>64GB</p>
                 <p>2GB DDR</p>
-                <p>1300 USD</p>
-                <p>Intel Core i5</p>
+                <p class="last-multiple">1300 USD</p>
+                <p class="multiple">Intel Core i5</p>
             </div>
         </fieldset>
         <fieldset>
@@ -58,8 +58,8 @@
             <div class="product-content">
                 <p>64GB</p>
                 <p>2GB DDR</p>
-                <p>1300 USD</p>
-                <p>Intel Core i5</p>
+                <p class="last-multiple">1300 USD</p>
+                <p class="multiple">Intel Core i5</p>
             </div>
         </fieldset>
         <fieldset>
@@ -68,8 +68,8 @@
             <div class="product-content">
                 <p>64GB</p>
                 <p>2GB DDR</p>
-                <p>1300 USD</p>
-                <p>Intel Core i5</p>
+                <p class="last-multiple">1300 USD</p>
+                <p class="multiple">Intel Core i5</p>
             </div>
         </fieldset>
         <fieldset>
@@ -78,8 +78,8 @@
             <div class="product-content">
                 <p>64GB</p>
                 <p>2GB DDR</p>
-                <p>1300 USD</p>
-                <p>Intel Core i5</p>
+                <p class="last-multiple">1300 USD</p>
+                <p class="multiple">Intel Core i5</p>
             </div>
         </fieldset>
         <div class="laptops-parameters">
