Laptop Store Task Initial Commit

--- a/03.CSS-Layout/5.LaptopStore/index.html
+++ b/03.CSS-Layout/5.LaptopStore/index.html
@@ -24,6 +24,16 @@
     <main>
         <fieldset>
             <legend>Apple MacBook Air</legend>
+            <img src="images/product.jpg" alt="macbook-air">
+            <div class="product-content right">
+                <p>64GB</p>
+                <p>2GB DDR</p>
+                <p class="left">1300 USD</p>
+                <p class="left">Intel Core i5</p>
+            </div>
+        </fieldset>
+        <fieldset>
+            <legend>Apple MacBook Air</legend>
             <img src="images/product.jpg" alt="macbook-air" width="140" height="80">
             <div class="product-content">
                 <p>64GB</p>
@@ -38,8 +48,8 @@
             <div class="product-content">
                 <p>64GB</p>
                 <p>2GB DDR</p>
-                <p class="last multiple">1300 USD</p>
-                <p class="multiple">Intel Core i5</p>
+                <p>1300 USD</p>
+                <p>Intel Core i5</p>
             </div>
         </fieldset>
         <fieldset>
@@ -58,8 +68,8 @@
             <div class="product-content">
                 <p>64GB</p>
                 <p>2GB DDR</p>
-                <p class="last-multiple">1300 USD</p>
-                <p class="multiple">Intel Core i5</p>
+                <p>1300 USD</p>
+                <p>Intel Core i5</p>
             </div>
         </fieldset>
         <fieldset>
@@ -68,18 +78,8 @@
             <div class="product-content">
                 <p>64GB</p>
                 <p>2GB DDR</p>
-                <p class="last-multiple">1300 USD</p>
-                <p class="multiple">Intel Core i5</p>
-            </div>
-        </fieldset>
-        <fieldset>
-            <legend>Apple MacBook Air</legend>
-            <img src="images/product.jpg" alt="macbook-air" width="140" height="80">
-            <div class="product-content">
-                <p>64GB</p>
-                <p>2GB DDR</p>
-                <p class="last-multiple">1300 USD</p>
-                <p class="multiple">Intel Core i5</p>
+                <p>1300 USD</p>
+                <p>Intel Core i5</p>
             </div>
         </fieldset>
         <div class="laptops-parameters">
