BTV Web Page Initial Commit

--- a/03.CSS-Layout/5.LaptopStore/index.html
+++ b/03.CSS-Layout/5.LaptopStore/index.html
@@ -48,8 +48,8 @@
             <div class="product-content">
                 <p>64GB</p>
                 <p>2GB DDR</p>
-                <p>1300 USD</p>
-                <p>Intel Core i5</p>
+                <p class="inline">1300 USD</p>
+                <p class="inline">Intel Core i5</p>
             </div>
         </fieldset>
         <fieldset>
@@ -83,13 +83,13 @@
             </div>
         </fieldset>
         <div class="laptops-parameters">
-            <label for="range-price">Min Price: 500 USD</label>
+            <label>Min Price: 500 USD</label>
             <input type="range" min="500" max="2500" value="500">
-            <label for="range-price">Man Price: 1500 USD</label>
+            <label>Man Price: 1500 USD</label>
             <input type="range" min="500" max="2500" value="500">
-            <label for="range-price">Min RAM: 4 GB</label>
+            <label>Min RAM: 4 GB</label>
             <input type="range" min="500" max="2500" value="500">
-            <label for="range-price">Max RAM: 16 GB</label>
+            <label>Max RAM: 16 GB</label>
             <input type="range" min="500" max="2500" value="500">
         </div>
     </main>
